--- a/03《微博@Liberalisman面试知识点总结》/面试题.md
+++ b/03《微博@Liberalisman面试知识点总结》/面试题.md
@@ -1,41 +1,41 @@
 # 面试题
-- 1.LAC（两个view的第一个公共父view） H
-- 2.sum（n）H
-- 3.K个一组反转链表
-- 4.合并多个升序的数组为一个降序数组 H
-- 5.属性redawrite，readonly，assign，retain，copy，nonatomic各有什么作用，在哪种情况下用？H
-- 6.属性是否可以扩展，如何扩展 H
-- 7.weak属性是否需要在dealloc中置nil，底层实现怎么样的？ H
-- 8.autorelease实现逻辑 H
-- 9.Runloop和线程有什么关系 H
-- 10.runloop各种状态处理了那些事 H
-- 11.OC中的类方法和实例方法有什么区别和联系？ H
-- 12.使用block时什么情况会发生引用循环，如何处理；H
-- 13.一个block捕获到了一个局部变量，一个block捕获到了两个局部变量，这两个block的类型是一样的吗？其内部布局相同吗？如果类型想同，内存布局不同的话，为什么类型相同的实例，其内存布局不同？ H
-- 14.Runtime如何通过selector找到对应的IMP地址？H
-- 15.Method Swizzling，Method Swizzie是发如何确保安全的替换方法的？如何确保替换的不是父类的方法？H
-- 16.A是父类，B和C同时继承于A,在B里面对父类方法进行交换，对C是否有影响  H
-- 17.简述内存分区情况 H
-- 18.方法缓存，为什么需要方法缓存，什么情况下会有问题；H
-- 19.多线程，设计一个读写锁 H
-- 20.并行同步和串行异步区别 H
-- 21.栅栏函数，dispatch_barries_async有什么作用，有什么使用场景？H
-- 22.请举出5个以上iOS中被称为黑魔法的编译宏，并解释其作用 H
-- 23.请描述9种软件设计的原则，并分别描述你在设计一个SDK的时候是如果运用这些原则的 H
-- 24.面向协议编程特点 H
-- 25.如何捕获iOS的Crash？如果捕获C++的Crash？如果捕获Switch的Crash？前端如何捕获JS的Crsh？Flutter如何捕获Crash？ H
-- 26.Swift如果调用C代码
-- 27.Swift如何调用方法？C++如何调用方法？和OC的Runtime有什么区别？
-- 28.WKWebView都有那些坑
-- 29.iOS中的WebView如何优化
-- 30.小程序是如何实现的
-- 31.JSPatch是如何实现的 H
-- 32.请描述23种设计模式在iOS中的例子
-- 33.在设计插件的时候，应该如何运用23中设计模式？
-- 34.如何保证iOS App的安全
-- 35.如何做iOS逆向
-- 36.请列举Unix信号
-- 37.请列举Swift常用的关键字和用法（比如final、lazy等）
+- 1.[LAC（两个view的第一个公共父view） H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#1lac两个view的第一个公共父view-h)
+- 2.[sum（n）H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#2sumnh)
+- 3.[K个一组反转链表](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#3k个一组反转链表)
+- 4.[合并多个升序的数组为一个降序数组 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#4合并多个升序的数组为一个降序数组-h)
+- 5.[属性redawrite，readonly，assign，retain，copy，nonatomic各有什么作用，在哪种情况下用？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#5属性redawritereadonlyassignretaincopynonatomic各有什么作用在哪种情况下用h)
+- 6.[属性是否可以扩展，如何扩展 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#6属性是否可以扩展如何扩展-h)
+- 7.[weak属性是否需要在dealloc中置nil，底层实现怎么样的？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#7weak属性是否需要在dealloc中置nil底层实现怎么样的-h)
+- 8.[autorelease实现逻辑 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#8autorelease实现逻辑-h)
+- 9.[Runloop和线程有什么关系 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#9runloop和线程有什么关系-h)
+- 10.[runloop各种状态处理了那些事 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#10runloop各种状态处理了那些事-h)
+- 11.[OC中的类方法和实例方法有什么区别和联系？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#11oc中的类方法和实例方法有什么区别和联系-h)
+- 12.[使用block时什么情况会发生引用循环，如何处理；H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#12使用block时什么情况会发生引用循环如何处理h)
+- 13.[一个block捕获到了一个局部变量，一个block捕获到了两个局部变量，这两个block的类型是一样的吗？其内部布局相同吗？如果类型想同，内存布局不同的话，为什么类型相同的实例，其内存布局不同？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#13一个block捕获到了一个局部变量一个block捕获到了两个局部变量这两个block的类型是一样的吗其内部布局相同吗如果类型想同内存布局不同的话为什么类型相同的实例其内存布局不同-h)
+- 14.[Runtime如何通过selector找到对应的IMP地址？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#14runtime如何通过selector找到对应的imp地址h)
+- 15.[Method Swizzling，Method Swizzie是发如何确保安全的替换方法的？如何确保替换的不是父类的方法？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#15method-swizzlingmethod-swizzie是发如何确保安全的替换方法的如何确保替换的不是父类的方法h)
+- 16.[A是父类，B和C同时继承于A,在B里面对父类方法进行交换，对C是否有影响  H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#16a是父类b和c同时继承于a在b里面对父类方法进行交换对c是否有影响--h)
+- 17.[简述内存分区情况 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#17简述内存分区情况-h)
+- 18.[方法缓存，为什么需要方法缓存，什么情况下会有问题；H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#18方法缓存为什么需要方法缓存什么情况下会有问题h)
+- 19.[多线程，设计一个读写锁 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#19多线程设计一个读写锁-h)
+- 20.[并行同步和串行异步区别 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#20并行同步和串行异步区别-h)
+- 21.[栅栏函数，dispatch_barries_async有什么作用，有什么使用场景？H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#21栅栏函数dispatch_barries_async有什么作用有什么使用场景h)
+- 22.[请举出5个以上iOS中被称为黑魔法的编译宏，并解释其作用 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#22请举出5个以上ios中被称为黑魔法的编译宏并解释其作用-h)
+- 23.[请描述9种软件设计的原则，并分别描述你在设计一个SDK的时候是如果运用这些原则的 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#23请描述9种软件设计的原则并分别描述你在设计一个sdk的时候是如果运用这些原则的-h)
+- 24.[面向协议编程特点 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#24面向协议编程特点-h)
+- 25.[如何捕获iOS的Crash？如果捕获C++的Crash？如果捕获Switch的Crash？前端如何捕获JS的Crsh？Flutter如何捕获Crash？ H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#25如何捕获ios的crash如果捕获c的crash如果捕获switch的crash前端如何捕获js的crshflutter如何捕获crash-h)
+- 26.[Swift如果调用C代码](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#26swift如果调用c代码)
+- 27.[Swift如何调用方法？C++如何调用方法？和OC的Runtime有什么区别？](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#27swift如何调用方法c如何调用方法和oc的runtime有什么区别)
+- 28.[WKWebView都有那些坑](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#28wkwebview都有那些坑)
+- 29.[iOS中的WebView如何优化](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#29ios中的webview如何优化)
+- 30.[小程序是如何实现的](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#30小程序是如何实现的)
+- 31.[JSPatch是如何实现的 H](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#31jspatch是如何实现的-h)
+- 32.[请描述23种设计模式在iOS中的例子](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#32请描述23种设计模式在ios中的例子)
+- 33.[在设计插件的时候，应该如何运用23中设计模式？](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#33在设计插件的时候应该如何运用23中设计模式)
+- 34.[如何保证iOS App的安全](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#34如何保证ios-app的安全)
+- 35.[如何做iOS逆向](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#35如何做ios逆向)
+- 36.[请列举Unix信号](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#36请列举unix信号)
+- 37.[请列举Swift常用的关键字和用法（比如final、lazy等）](https://github.com/ReginaVicky/iOSInterviewQuestions/blob/master/03《微博%40Liberalisman面试知识点总结》/面试题.md#37请列举swift常用的关键字和用法比如finallazy等)
 
 
 # 面试题
@@ -719,6 +719,12 @@ pthread_cond_t cond = PTHREAD_COND_INITIALIZER;
 
 ### 20.并行同步和串行异步区别 H
 
+
+| 线程 | 同步                                                         | 异步                                                         | 对比                                     |
+| ---- | ------------------------------------------------------------ | ------------------------------------------------------------ | ---------------------------------------- |
+| 串行 | 在主线程操作, 任务一次执行, 执行完成后, 在执行主线程的内容   | 创建一个新的子线程, 所有任务在子线程操作, 线程内容的任务依次执行, 子线程和主线程的内容同时执行 | 是否阻塞主线程                           |
+| 并行 | 在主线程操作, 主线程任务等待, 所有任务同时创建, 但是在此队列中, 任务执行为依次执行, 没有轮到的任务处于等待状态, 执行完成后, 执行主线程内容 | 创建多条线程(未必有多少任务创建多少线程, 有点像cell的复用), 按顺序创建任务, 同时执行, 同时, 主线程任务正常执行 | 1.是否阻塞主线程2.任务的执行时间是否统一 |
+|      | 1. 主线程阻塞等待2. 任务的创建和执行时间点                   | 1. 主线程异步执行, 不阻塞.2. 任务的创建和执行时间点          |  
 
 ### 21.栅栏函数，dispatch_barries_async有什么作用，有什么使用场景？H
 - dispatch_barrier_async/dispatch_barrier_sync（栅栏函数）
